RESOLVED FIXED314707
[Site Isolation] Fix loaded-registrable-domains-get-reported.html timing out
https://bugs.webkit.org/show_bug.cgi?id=314707
Summary [Site Isolation] Fix loaded-registrable-domains-get-reported.html timing out
zak ridouh
Reported 2026-05-12 23:10:08 PDT
Under site isolation, a cross-origin iframe's LocalFrame is the root of its own local frame tree (LocalFrame::isRootFrame() returns true when m_rootFrame.get() == this), so WebPage::didCommitLoad was treating the iframe commit as a root-frame navigation and calling clearLoadedSubresourceDomains() — wiping the set immediately after the iframe's own domain had been recorded. Fix this.
Attachments
zak ridouh
Comment 1 2026-05-12 23:13:23 PDT
Radar WebKit Bug Importer
Comment 2 2026-05-12 23:13:29 PDT
EWS
Comment 3 2026-05-14 17:18:58 PDT
Committed 313281@main (2472cf784a52): <https://commits.webkit.org/313281@main> Reviewed commits have been landed. Closing PR #64820 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.