[Site Isolation] Fix loaded-registrable-domains-get-reported.html timing out <https://bugs.webkit.org/show_bug.cgi?id=314707> <rdar://problem/176951227>

Reviewed by Sihui Liu and Rupin Mittal.

313192@main (#64651) fixed most of the reporting path for site isolation:
it broadcasts GetLoadedSubresourceDomains to every web content process,
gates clearLoadedSubresourceDomains() on main-frame commits, and uses the
main frame's security origin instead of its URL to filter the set. That
covered the ResourceLoadStatistics.BackForwardPerPageData API test but
the layout test loaded-registrable-domains-get-reported.html still timed
out because ClearLoadedSubresourceDomains is only sent to the legacy
main-frame process — the iframe process's set is never cleared between
sub-tests, so domains from earlier runs leak into later assertions.

* Source/WebKit/UIProcess/WebPageProxy.cpp:
  (WebPageProxy::clearLoadedSubresourceDomains): Broadcast the clear to
  every web content process via forEachWebContentProcess, matching the
  pattern getLoadedSubresourceDomains uses on the query side.

* LayoutTests/platform/mac-site-isolation/TestExpectations:
* LayoutTests/platform/ios-site-isolation/TestExpectations: Remove the
  [ Timeout ] expectation for the now-passing test.

Canonical link: https://commits.webkit.org/313281@main